[metadata]
name = montecarlo4
version = 1.0.0
author = Alec Burnett
author_email = alecb03@vt.edu
description = Computes montecarlo
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.6



# Helper file to handle all configs
https://montecarlo4.readthedocs.io/en/latest/

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    montecarlo4/_version.py

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[aliases]
test = pytest
